...
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/title_block">

        <Button
            android:id="@+id/button_make_reservation"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_reservation"
            app:layout_constraintTop_toTopOf="parent" />

...
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/my_details"
            app:layout_constraintTop_toBottomOf="@id/button_make_reservation" />

        <Button
            android:id="@+id/button_my_cars"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/my_cars"
            app:layout_constraintTop_toBottomOf="@id/button_my_details" />
...
