...
        android:id="@+id/btn_block"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_save"
            style="@style/button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:drawableLeft="@drawable/ic_baseline_save_24"
            app:layout_constraintEnd_toStartOf="@id/btn_delete"
...
