...
    <string name="drivers_license">Drivers License</string>
    <string name="update_drivers_license">Update Drivers License</string>
    <string name="my_cars">My cars</string>
    <string name="update_car">Update car</string>
    <string name="add_car">Add car</string>
    <string name="my_reservations">My reservations</string>
    <string name="reservation_details">Reservation Details</string>
    <string name="update_reservation">Update Reservation</string>
    <string name="action_logout">Logout</string>
    <string name="make_reservation">make reservation</string>
    <string name="contact">Contact</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
...
    <string name="update_account">Update personal details</string>
    <string name="change_account">Change your account details?</string>
    <string name="pricing">Pricing</string>
    <string name="batteryfuelusage">Battery / fuel usage</string>
    <string name="capacityandfueltank">Capacity / fueltank</string>
    <string name="total_range">Total range</string>
    <string name="price_per_day">Price per day</string>
    <string name="fueltype">Fuel type</string>
    <string name="battery_capacity">Battery capacity</string>
    <string name="size_fueltank">Size fueltank</string>
    <string name="range_per_kw">Range per kW</string>
    <string name="range_per_kilo">Range per kilo</string>
    <string name="range_per_liter">Range per liter</string>
...
