<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.car.SearchCars">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:contentDescription="@string/logo_sharity"
        android:padding="0dp"
        android:src="@drawable/ic_sharity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/car_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="50dp"
        android:checkedButton="@id/option_electric"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <RadioButton
            android:id="@+id/option_electric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electric"/>

        <RadioButton
            android:id="@+id/option_hydrogen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hydrogen" />

        <RadioButton
            android:id="@+id/option_petrol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petrol" />

        <RadioButton
            android:id="@+id/option_any"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/any" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/electric"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_options" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_constraint_date_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOption"
        tools:layout_editor_absoluteX="30dp"
        tools:ignore="NotSibling">


        <Button
            android:id="@+id/date_picker"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_baseline_calendar_month_24"
            android:layout_margin="30dp"
            android:text="@string/pick_date"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/search_button"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:text="@string/search_cars"
        app:layout_constraintTop_toBottomOf="@+id/button_constraint_date_button" />


</androidx.constraintlayout.widget.ConstraintLayout>

